// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches snapshot 1 1`] = `
<section
  className="SectionWrapper"
  data-testid="sectionWrapper"
/>
`;

exports[`Matches snapshot 2 1`] = `
<section
  className="SectionWrapper"
  data-testid="sectionWrapper"
>
  <div>
    Anything
  </div>
</section>
`;
